# Greyscale_API_Creation

./: CMakeLists.txt  LICENSE  README.md  gray.h  server.cpp
